my-app/src/products/ProductPage.css
.product-img {
  flex: 0 0 400px;
}
.product-img .image {
  width: 100%;
  left: 0;
  top: 0;
}
.product-text {
  flex: 1 0;
}
.product-text > * {
  margin: 1em;
}
.product-image {
  flex: 1 1;
}
.product-image img {
  width: 100%;
}
.name {
  font-size: 28px;
}
.description {
  font-size: 16px;
}
.description > * {
  margin: 1em;
}
.buy-btn-container > * {
  margin: 1em;
}
.btn-grey,
.btn-black {
  padding: 1em;
  margin-right: 1em;
  width: fit-content;
  height: fit-content;
  border: none !important;
  min-width: 100px;
}
.btn-grey {
  background-color: #eee;
  color: black;
}
.btn-black {
  background-color: #000;
  color: white;
}
/*# sourceMappingURL=ProductPage.css.map */
.product {
  font-family: 'Helvetica Neue';
}
.product__header {
  position: relative;
  min-height: 100vh;
  background: #f9f9f9;
}
.product__header-background {
  position: fixed;
  object-fit: cover;
  width: 100vw;
  height: 100%;
  z-index: 1;
  background-color: #f9f9f9;
}
.wrapper {
  position: relative;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  padding: 3rem !important;
  min-height: 100vh;
  z-index: 100;
}
.product__header-logo {
  border-top: 2.4px solid black;
  border-bottom: 2.4px solid black;
  padding: 2rem 0;
}
.product__header-title {
  font-size: 6rem;
  font-weight: 900;
  margin: 6rem 0;
  line-height: 7.8rem;
}
.product__header-text {
  font-size: 2.3rem;
  margin-bottom: 3rem;
  line-height: 3rem;
}
.product__header-buttons {
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.product__header-purchase {
  border: none;
  font-size: 1.6rem;
  color: white;
  font-weight: bold;
  min-width: 33rem;
  background: black;
  height: 4.5rem;
}
.logo {
  width: 38rem;
}
.product-content {
  position: relative;
  z-index: 100;
  background: #ebebeb;
  /* margin-top: 100vh; */
}
.page-section {
  padding: 13rem 0;
  border-bottom: 2.4px solid black;
}
.page-section__title {
  font-size: 5.8rem;
  line-height: 7.5rem;
  margin-top: 0;
  margin-bottom: 1.8rem;
}
.page-section__text {
  font-size: 2.36rem;
  margin: 0;
  line-height: 3.2rem;
}
.mgp-quality__features {
  margin-top: 6rem;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(22rem, 1fr));
  grid-row-gap: 3rem;
  grid-column-gap: 2rem;
}
.mgp-quality__feature-title {
  font-size: 2.4rem;
  font-weight: bolder;
  width: 12rem;
  line-height: 3rem;
  margin: 0;
}
.mgp-quality__feature-text {
  max-width: 23rem;
  font-size: 1.6rem;
  margin-bottom: 0;
  line-height: 2rem;
}
.mgp-gallery {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-column-gap: 2rem;
  grid-row-gap: 2rem;
  padding-top: 3.5rem;
  padding-bottom: 12rem;
}
.mask-image__info > * {
  margin: 0;
  padding-left: 52%;
  font-size: 0.85rem;
}
.mgp-group-purchase__price-info {
  margin-top: 3rem;
  display: grid;
  grid-template-columns: 30% 1fr;
  grid-row-gap: 1rem;
  grid-column-gap: 3rem;
  font-size: 2.6rem;
}
.price-table__order-title {
  font-size: 2.37rem;
}
.group-order__price-table {
  display: grid;
  grid-template-columns: 45% 1fr;
  grid-row-gap: 2rem;
  grid-column-gap: 3rem;
  font-size: 2.6rem;
}
.price-group > * {
  margin: 0;
  font-size: 1.6rem;
}
.price {
  font-size: 2.4rem;
  font-weight: bold;
}
.u-font-light {
  font-weight: 200;
}
.u-font-medium {
  font-weight: 400;
}
.u-font-bold {
  font-weight: bolder;
}
.u-bottom-border {
  border-bottom: 2.4px solid black;
}
.u-padding-bottom {
  padding-bottom: 13rem;
}
.u-no-padding-bottom {
  padding-bottom: 0;
}
.u-no-margin {
  margin: 0!important;
}
.u-no-bottom-border {
  border-bottom: none;
}
.u-border-grey {
  border-color: #f5f5f5;
}
.u-underline {
  padding-bottom: 2px;
  border-bottom: 1px solid black;
}
.u-underline-white {
  border-bottom: 1px solid #f5f5f5;
}
.u-underline-grey {
  border-bottom: 1px solid #7c7c7c;
}
.u-padding-horizontal-default {
  padding-left: 3rem;
  padding-right: 3rem;
}
.u-container {
  overflow-x: visible;
  z-index: 100;
}
.u-background-black {
  background: black;
}
.u-white-background {
  background: white;
}
.u-black-font {
  color: black;
}
.u-font-light-grey {
  color: #f5f5f5;
}
.u-font-grey {
  color: #7c7c7c;
}

/* Animations */
.fadeInUp {
  animation-name: fadeInUp;
  animation-fill-mode: both;
}
@keyframes fadeInUp {
  from {
    transform: translate3d(0,40px,0);
    opacity: 0;
  }

  to {
    transform: translate3d(0,0,0);
    opacity: 1
  }
}
.fadeIn {
  opacity: 0;
  animation-name: fadeIn;
  animation-fill-mode: both;
}
@keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1
  }
}
.fadeInLeft {
  animation-name: fadeInLeft;
  animation-fill-mode: both;
}
@keyframes fadeInLeft {
  from {
    transform: translate3d(-20px,0,0);
    opacity: 0;
  }

  to {
    transform: translate3d(0,0,0);
    opacity: 1
  }
}
.fadeInDown {
  animation-name: fadeInDown;
  animation-fill-mode: both;
}
@keyframes fadeInDown {
  from {
    transform: translate3d(0,-40px,0);
    opacity: 0;
  }

  to {
    transform: translate3d(0,0,0);
    opacity: 1
  }
}
@media (max-width: 700px) {
  .group-order__price-table {
    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
  }
  .mgp-group-purchase__price-info {
    grid-template-columns: 1fr;
  }
  .product__header-buttons {
    display: block;
    width: 100%;
  }
  .product__header-purchase {
    margin-right: 1rem;
    margin-top: 2rem;
  }
}
/*
  ##Device = Most of the Smartphones Mobiles (Portrait)
  ##Screen = B/w 320px to 479px
*/
@media (min-width: 320px) and (max-width: 480px) {
  .mgp-gallery > * {
    grid-column-start: 1;
    grid-column-end: 3;
  }
}
/*# sourceMappingURL=ProductPage.css.map */

